Finish styling text-input - Refactored base styles into pseudos, mixins, main classes, and modifiers - Styled color-invert modifier - Utilized new font mixins for the form font family and fallbacks - Changed positioning to absolute so that the parent element's background color   is visible through the input. - Fix browser bugs rendering outlines and box-shadows on certain :states - Add styling and markup for :valid state.
Refactored Typography mixins and variables
- Refactor typography mixins to use rem units
- Change brand typeface to not use faulty kerning
- Create font-faces and variable for bold sans serif fallbacks
- Create sass variable for form fonts
- Add new font-sizing mixin for what would be an 'h7' or base sized 'forms'
	- this mixin uses the headline font but has letter spacing to suit the smaller size.

--- a/source/scss/_shame.scss
+++ b/source/scss/_shame.scss
@@ -36,5 +36,5 @@
 .dark-background {
     width: 100%;
     padding: 20px 0;
-    background-color: nth($pe-greyscale-color-list, 2);
+    background-color: nth($pe-greyscale-color-list, 3);
 }
