--- a/source/scss/atoms/_text-input.scss
+++ b/source/scss/atoms/_text-input.scss
@@ -1,47 +1,121 @@
 // ==========================================================================
 // TEXT INPUT STYLES
 // ==========================================================================
-
 // BEVM: text-input, text-input__input, text-input__border
-.text-input {
+
+// PSEUDO CLASSES 
+// ==========================================================================
+%text-input {
     position: relative;
     width: 100%;
+    height: 40px;
     margin: 0 auto;
     border: 0;
+}
+
+%text-input__input {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    padding: rem(10px) rem(2px);
+    border: 0;
+    @include font-family-forms();
+
+    &:focus, &:active {
+        outline: 0;
+    }    
+
+    &:invalid, &:-moz-submit-invalid, &:-moz-ui-invalid {
+        box-shadow: none;
+    }
+
+    &:focus + .text-input__border, &:valid + .text-input__border {
+        border-width: rem(3px) 0 rem(3px) 0;
+        border-radius: rem(4px);
+        outline: none;
+    }
+}
+
+%text-input__border {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 0;
+    transition-duration: .1s; 
+    transition-property: border-width, border-color, border-radius;
+    transition-timing-function: ease-in-out;
+    border-width: rem(1px) 0;
+    border-style: solid;
+    border-radius: rem(3px);
+    content: "";
+    z-index: 2;
+}
+
+// MIXINS
+// ==========================================================================
+@mixin text-input-color (
+    $placeholder-color: nth($pe-greyscale-color-list, 4),
+    $text-color-active: nth($pe-greyscale-color-list, 2),
+    $text-color-done: nth($pe-greyscale-color-list, 2),
+    $border-color: $pe-color-grey, 
+    $border-color-focused: nth($pe-primary-color-list, 3),
+    $box-shadow: nth($pe-greyscale-color-list, 5)
+) {
+    .text-input__input {
+        background-color: $pe-color-transparent;
+        color: $text-color-done;
+        
+        &::placeholder {
+            color: $placeholder-color;
+        }
+
+        &:focus, &:active {
+            color: $text-color-active;
+        }
+
+        &:focus + .text-input__border, &:valid + .text-input__border {
+            border-color: $border-color-focused;
+            background-color: $border-color-focused;
+        }        
+    }
+
+    .text-input__border {
+        border-color: $border-color;
+        background-color: $border-color;
+        box-shadow: 0 rem(1px) 1px transparentize($box-shadow, 0.8);
+    }    
+}
+
+
+// MAIN CLASSES 
+// ==========================================================================
+.text-input {
+    @extend %text-input;
+    @include text-input-color();
 
     &__input {
-        width: 100%;
-        padding: 10px 2px;
-        border: 0;
-
-        &:focus {
-            outline: none;
-        }
-
-        &:focus + .text-input__border {
-            border-width: 3px 0px 3px 0px;
-            border-radius: 4px;
-            border-color: nth($pe-primary-color-list, 3);
-            outline: none;
-        }
+        @extend %text-input__input;
     }
 
     &__border {
-        display: block;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 0;
-        transition-duration: .1s; 
-        transition-property: border-width, border-color, border-radius;
-        transition-timing-function: ease-in-out;
-        border-width: 1px 0px 1px 0px;
-        border-style: solid;
-        border-radius: 3px;
-        border-color: $pe-color-grey;
-        content: "";
-        z-index: 1;
+        @extend %text-input__border;
     }
 }
 
 
+// MODIFIER CLASSES 
+// ==========================================================================
+// sass-lint:disable class-name-format
+
+// Color Modifiers 
+.text-input_color-invert {
+    @include text-input-color (
+        $placeholder-color: nth($pe-greyscale-color-list, 6),
+        $text-color-active: $pe-color-white,
+        $text-color-done: $pe-color-white,
+        $border-color: $pe-color-white, 
+        $border-color-focused: nth($pe-primary-color-list, 3),
+        $box-shadow: nth($pe-greyscale-color-list, 2)
+    );
+}
