--- a/source/scss/utilities/vars/_typography-vars.scss
+++ b/source/scss/utilities/vars/_typography-vars.scss
@@ -12,11 +12,14 @@ $pe-relpath-fonts: "";
 //$font-url--google: 'http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900';
 $pe-fontfamily-brand: 'League Spartan';
 $pe-fontfamily-headline: 'cabinbold';
+$pe-fontfamily-forms: 'cabinbold';
+$pe-fontfamily-paragraph-bold: 'source_sans_probold';
 $pe-fontfamily-paragraph: 'source_sans_proregular';
 $pe-fontfamily-paragraph-italic: 'source_sans_proitalic';
 $pe-fontfamily-legal: 'amiriregular'; 
 $pe-fontfamily-legal-italic: 'amirislanted';
 $pe-fontfamily-sansserif-fallbacks: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$pe-fontfamily-sansserifbold-fallbacks: 'helveticaBoldFallback', 'arialBoldFallback', sans-serif;
 $pe-fontfamily-serif-fallbacks: "Times New Roman", serif;
 
 // Font Weights
